<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/bookImage"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_upload" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:text="@string/book_name" />

                <TextView
                    android:id="@+id/bookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/gray_500"
                    android:text="@string/book_author" />

                <TextView
                    android:id="@+id/bookYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow_700"
                    android:text="@string/year" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/bookRating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:progressBackgroundTint="@color/gray"
                        android:progressTint="@color/yellow_500"
                        android:rating="4.5"
                        android:secondaryProgressTint="@color/white"
                        android:stepSize="0.5" />

                    <TextView
                        android:id="@+id/ratingNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/year"
                        android:textColor="@color/yellow_700" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/editBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="13sp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/edit" />
        </LinearLayout>

        <TextView
            android:id="@+id/bookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:text="@string/book_price" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>